--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "webpack-dev-server --config ./src/webpack.config.js --inline --hot",
-    "build": "webpack --config ./src/webpack.config.js -p --bail --progress"
+    "compile": "webpack --config ./src/webpack.config.js -p --bail --progress",
+    "build": "rm -rf dist/* & rm index.html & npm run compile"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
